--- a/take3/take3/ReadMe
+++ b/take3/take3/ReadMe
@@ -1,1 +1,1 @@
-only needs take3.py and index.html to run. GUI.py is a broken program
+only needs take3.py and index.html to run. GUI.py is a broken program, test py is not for use eithe.
